crashreporter_hq/static/hq.css
/* Shown on the right hand side of the screen (ie everything not in the side navigation bar) */
#content {
    background-image:url(images/bg.gif);
	background-repeat:repeat-x;
	background-color:#121212;
    font-size:16px;
    color: #FFFFFF;
    margin: 0%;
}

/* Navigation bar (Left side bar)*/
.navbar {
    background: #195476;
    /*width: 5%;*/
}

.navbar md-toolbar {
    background: #195476;
    text-align: center;
}

.navbar md-button {
    font-size:26px;
}

#logged-in-info {
	line-height:20px;
	font-size:16px;
	color:#BECF96;
	}


#copywrite {
	line-height:20px;
	font-size:14px;
	color:#BECF96;
	}


/* Tables */
table {
    background-color:#FFFFFF;
    border-collapse: collapse;
    border-color: #000000;
    width: 100%;
    color: #000000;

}

.reporttable td {
    text-align: center;
}

.reporttable tr {
    height: 40px;
}


.tableheader {
    background-color:#FFFFC7;
    font-weight: bold;
    color: #FFFFFF;
    background-image:url(images/bg_navigation.gif);
    text-align: center;
}

.tableheader:hover{
    background-color:#FFFFC7;
    font-weight: bold;
    color: #FFFFFF;
    cursor: pointer;
    background-image:url(images/bg_navigation_hover.gif);
}


.bubblebox {
    padding: 0px 30px 20px 20px;
    color: #FFFFFF;
    background-image:url(images/bg_content.gif);
    background-color: #3e3e3e;
    background-repeat:repeat-x;
	border-radius: 10px;
    border: 2px solid #000000;
}


h1, h2, h3, h4, h5 {
    font-family: Arial, Helvetica, sans-serif;
}

.invis-list li{
    list-style-type: none;
}

